# SimpleVolumeEngine

./: CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  vcpkg.json
res/: computeGradient-cs.glsl  volume-fs.glsl  volume-vs.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  InteractorGUI.cpp  InteractorGUI.h  InteractorKeyboard.cpp  InteractorKeyboard.h  InteractorMouse.cpp  InteractorMouse.h  RendererVolume.cpp  RendererVolume.h  Scene.cpp  Scene.h  SystemManager.cpp  SystemManager.h  Volume.cpp  Volume.h  main.cpp
